-7차 작업
